--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/pro": "2.0.3",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "cordova-plugin-ionic": "^5.0.3",
+    "cordova-sqlite-storage": "^2.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "node": "^10.7.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -36,5 +38,10 @@
     "@ionic/app-scripts": "3.1.11",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
