--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.10.0",
+    "@ionic-native/insomnia": "^4.11.0",
     "@ionic-native/screen-orientation": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
@@ -28,6 +29,7 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "^7.1.1",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic": "^5.0.3",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.0.1",
@@ -56,7 +58,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-insomnia": {}
     },
     "platforms": [
       "android"
